[gd_scene load_steps=3 format=3 uid="uid://fhum8d0to3tu"]

[ext_resource type="Script" path="res://scripts/top_menu_bar.gd" id="1_evjx0"]
[ext_resource type="Texture2D" uid="uid://cuiaq8wwhnuil" path="res://characters/dwarf/Dwarf 1.png" id="2_tf851"]

[node name="TopMenuBar" type="MenuBar"]
offset_right = 716.0
offset_bottom = 33.0
script = ExtResource("1_evjx0")
metadata/_edit_group_ = true

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 107.0
offset_right = 156.0
offset_bottom = 31.0
text = "Clear"

[node name="player_select" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 100.0
offset_bottom = 32.0
selected = 0
allow_reselect = true
item_count = 1
popup/item_0/text = "Dwarf"
popup/item_0/icon = ExtResource("2_tf851")

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = -438.0
offset_top = 1.0
offset_right = -397.0
offset_bottom = 32.0
text = "Play"

[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="item_selected" from="player_select" to="." method="_on_player_select_item_selected"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
